--- a/Final_Celerates/index.css
+++ b/Final_Celerates/index.css
@@ -69,7 +69,8 @@ body {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #C62E2E;
+    background-color: #f4b5b5;
+    border-radius: 10px;
     min-width: 160px;
     box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
     z-index: 10;
@@ -79,16 +80,17 @@ body {
     display: block;
 }
 
-
 .dropdown-content a {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
 
 .dropdown-content a:hover {
-    background-color: #f4b5b5;
+    background-color: #ffffff;
+    color: #000; 
+    border-radius: 10px;
 }
 
 .search-bar {
