--- a/Final_Celerates/user.css
+++ b/Final_Celerates/user.css
@@ -68,7 +68,8 @@ body {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #C62E2E;
+    background-color: #f4b5b5;
+    border-radius: 10px;
     min-width: 160px;
     box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
     z-index: 10;
@@ -79,14 +80,16 @@ body {
 }
 
 .dropdown-content a {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
 
 .dropdown-content a:hover {
-    background-color: #f4b5b5;
+    background-color: #ffffff;
+    color: #000; 
+    border-radius: 10px;
 }
 
 /* Search bar */
@@ -142,6 +145,85 @@ body {
 
 .keranjang00:hover, .profile-icon:hover {
     color: #f4b5b5;
+}
+
+.profil-dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.profil-dropbtn {
+    background-color: #C62E2E;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 1rem;
+    padding: 10px;
+}
+
+/* Profil Dropdown */
+.profil-dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #F7CDCF; 
+    min-width: 200px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 10;
+    margin-top: 145px; 
+    margin-right: 34px;
+    right: 10px;
+    border-radius: 10px; 
+    overflow: hidden;
+    transform: translateY(-10px);
+    opacity: 0;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+/* Dropdown item */
+.profil-dropdown-content a {
+    color: #000;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 0.9rem;
+    text-align: center; 
+    background-color: #F7CDCF; 
+}
+
+/* Hover dan active state */
+.profil-dropdown-content a:hover, .profil-dropdown-content a:active {
+    background-color: #C62E2E; 
+    color: #000000; 
+}
+
+.profil-dropdown-content a:last-child {
+    border-bottom: none; 
+}
+
+.profil-dropdown-content.show {
+    display: block;
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.profil-dropdown-content a {
+    color: #000000;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 0.9rem;
+}
+
+.profil-dropdown-content a:hover {
+    background-color: #ffffff;
+    border-radius: 10px;
+}
+
+/* Menampilkan dropdown */
+.profil-dropdown-content.show {
+    display: block; 
+    transform: translateY(0); 
+    opacity: 1; 
 }
 
 .main-content {
