--- a/Final_Celerates/makanan.css
+++ b/Final_Celerates/makanan.css
@@ -340,7 +340,7 @@ body {
 }
 .product-card img {
     width: 100%;
-    height: 200px; /* Adjust the height as needed */
+    height: 200px; 
     object-fit: cover;
 }
 
@@ -371,6 +371,21 @@ body {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+.rating {
+    display: flex;
+    align-items: center;
+    gap: 5px; 
+}
+
+.stars {
+    font-size: 16px;
+    color: gold; 
+}
+
+.rating-number {
+    font-size: 14px;
+    color: #000000; 
 }
 /* Footer Section */
 .footer {
